# apex-os

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 21aed19b1fed_create_users_table.py  29b52d6add86_add_exercise_routine_and_routine_.py  5030165f0211_add_unique_constraint_to_username.py  8c7f0b8e4b2a_add_workout_tables.py  d1b4acfc0db9_add_routine_set_table_and_remove_sets_.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/models/: __init__.py  enums.py  exercise.py  routine.py  routine_exercise.py  routine_set.py  set.py  user.py  workout_exercise.py  workout_session.py
backend/app/routers/: auth.py
backend/app/schemas/: user.py
