[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.138.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "ruff>=0.15.20",
    "sqlalchemy>=2.0.51",
    "uuid>=1.30",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
